# f1x

./: .gitignore  .gitmodules  CMakeLists.txt  Config.h.in  Dockerfile  F1XConfig.h.in  README.md  SystemConfig.h.in
CInterface/: Makefile  f1x-aflgo.c  main.c  main_with_fuzz.c
demo/: Makefile  compile_commands.json  sort  sort.c  sort.gcda  sort.gcno  test.sh
doc/: Benchmarking.md  BuildFromSource.md  ComparisonAngelix.md  Development.md  Docker.md  Manual.md  Troubleshooting.md
lib/: ApplyTransformer.cpp  ApplyTransformer.h  CMakeLists.txt  Common.cpp  Common.h  F1XCommon.cpp  F1XCommon.h  F1XConfig.h  F1XID.h  InstrumentTransformer.cpp  InstrumentTransformer.h  MetaProgram.cpp  MetaProgram.h  PatchApplication.cpp  PatchApplication.h  ProfileInstrumentation.cpp  ProfileTransformer.cpp  ProfileTransformer.h  Profiler.cpp  Profiler.h  Project.cpp  Project.h  Repair.cpp  Repair.h  RepairCommon.cpp  RepairCommon.h  RepairUtil.cpp  RepairUtil.h  Runtime.cpp  Runtime.h  SchemaApplication.cpp  SchemaApplication.h  SearchEngine.cpp  SearchEngine.h  SearchSpaceMatchers.cpp  SearchSpaceMatchers.h  Synthesis.cpp  Synthesis.h  TransformationUtil.cpp  TransformationUtil.h  (+4 more)
lib/runtime/: runtime.c
repair/: CMakeLists.txt  Core.h  FaultLocalization.cpp  FaultLocalization.h  Global.cpp  Global.h  Profiler.cpp  Profiler.h  Project.cpp  Project.h  Repair.cpp  Repair.h  RepairUtil.cpp  RepairUtil.h  Runtime.cpp  Runtime.h  SearchEngine.cpp  SearchEngine.h  Synthesis.cpp  Synthesis.h  Typing.cpp  Typing.h  Util.cpp  Util.h
scripts/: download-and-build-llvm-3.8.1.sh  download-and-build-llvm38.sh  download-and-build-llvm381.sh
test/: Makefile  main  sharedMemTester.c
tests/: runall.sh
tests/if-condition/: program.c  test.sh
tests/intersect-ifdef/: program.c
tests/signed-int-overflow/: program.c  test.sh
tests/substitute-int2/: Notes.txt  program.c
tools/: CMakeLists.txt  F1X.cpp  F1X.h  F1XBench.cpp  F1XInstrument.cpp  F1XTransform.cpp  F1XValidate.cpp  LoggerConfig.h  ToolsCommon.h  f1x-cc  f1x-cxx
transform/: CMakeLists.txt  PatchApplication.cpp  PatchApplication.h  ProfileInstrumentation.cpp  ProfileInstrumentation.h  SchemaApplication.cpp  SearchSpaceMatchers.cpp  SearchSpaceMatchers.h  TransformGlobal.cpp  TransformUtil.cpp  TransformationUtil.cpp  TransformationUtil.h
